--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to Fauna Kitchen.</h1>
+    <a href="index.php">click here</a>
 </body>
 </html>
